@@ -71,6 +71,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 450025  Powerc: ACC file not implemented as a logical overlay of the VSR
         registers.
 450536  Powerpc: valgrind throws 'facility scv unavailable exception'
+451626  Syscall param bpf(attr->raw_tracepoint.name) points to unaddressable byte(s)
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
